--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,5 +9,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        'background-dark': '#1e2029', // Main dark background
+                        'card-dark': '#2c303a',      // Card/Sidebar background
+                        'primary-green': '#34d399',  // Primary action/progress green
+                        'text-light': '#e5e7eb',     // Light text color
+                        'text-secondary': '#9ca3af', // Secondary text color
+                    }
+                }
+            }
+        }
+    </script>
 </head>
 </html>
